--- a/import-excel-api/package.json
+++ b/import-excel-api/package.json
@@ -5,14 +5,28 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon",
-    "lint": "eslint --ext .js, .html -f ./node_modules/eslint-"
+    "lint": "eslint --ext .js, .html -f ./node_modules/eslint-friendly-formatter . --fix",
+    "prepush": "npm run lint",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/simonjuarez/import-excel.git"
   },
-  "keywords": [],
-  "author": "Simon Juarez /@",
+  "keywords": [
+    "nodejs",
+    "api",
+    "azure funtions",
+    "express",
+    "github-actions",
+    "swa",
+    "serveless",
+    "azure",
+    "posgresql",
+    "sql",
+    "javascript"
+  ],
+  "author": "Simon Juarez ",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/simonjuarez/import-excel/issues"
